--- a/ProgettoPW/src/main/webapp/index.html
+++ b/ProgettoPW/src/main/webapp/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <title>Index</title>
+    <title>Tom4World</title>
     <link rel="stylesheet" type="text/css" href="StyleIndex.css">
+    <link rel="shortcut icon" href="Immagini/Logo.ico" />
+    <meta aria-keyshortcuts="Tom4Worls">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <body>
+
     <header id="fascia">
-        <img src="Immagini/Logo.png" alt="logo" class="logo">
-        <h1 class="titolo">Tum4World</h1>
-        <div id="boxMenu">
-            <span class="elMenu"><a href='#'>HOME</a></span>
-            <span class="elMenu"><a href='./Chi-Siamo/chiSiamo.html'>CHI SIAMO</a></span>
-            <span class="elMenu"><a href='#'>ATTIVITA'</a></span>
-            <span class="elMenu"><a href='#'>CONTATTI</a></span>
+        <div id="intestazione">
+            <h1 class="titolo">Tum4World</h1>
         </div>
+        <nav>
+
+            <ul id="boxMenu">
+                <li class="elMenu">HOME</li>
+                <li class="elMenu">CHI SIAMO</li>
+                <li class="elMenu">ATTIVITA'</li>
+                <li class="elMenu">CONTATTI</li>
+                <li class="elMenu">SIGN-IN</li>
+                <li class="elMenu">LOG-IN</li>
+            </ul>
+        </nav>
     </header>
+    <script type="text/javascript" src="jsIndex.js"></script>
     <div id="corpo">
         <h3>DESCRIZIONE</h3>
         <p>
@@ -48,7 +58,7 @@
             DESCRIZIONE-DESCRIZIONE-DESCRIZIONE-DESCRIZIONE-DESCRIZIONE-DESCRIZIONE-DESCRIZIONE-DESCRIZIONE-DESCRIZIONE-DESCRIZIONE-DESCRIZIONE-DESCRIZIONE-DESCRIZIONE-DESCRIZIONE-
         </p>
         <img src="#" alt="IMMAGINE">
-        <form action="#" method="get">
+        <form action="/Locandina" method="get">
             <label>Volantino A5</label>
             <button type="button">Download</button>
         </form>
