modifica link foto

--- a/ProgettoPW/src/main/webapp/index.html
+++ b/ProgettoPW/src/main/webapp/index.html
@@ -116,7 +116,7 @@
             On est ensemble
             On est ensemble
         </p>
-        <img src="#" alt="IMMAGINE">
+        <img src="Immagini/ciao.jpg" alt="IMMAGINE">
         <form action="/Locandina" method="get">
             <label>Volantino A5</label>
             <button type="button">Download</button>
